# servable

./: .gitignore  Cargo.toml  README.md  lychee.toml  typos.toml
.github/workflows/: ci.yml
crates/servable/: Cargo.toml  README.md
crates/servable/htmx/: json-enc-1.9.12.js
crates/servable/src/: lib.rs  mime.rs  router.rs  types.rs
crates/servable/src/servable/: asset.rs  html.rs  mod.rs  redirect.rs
crates/servable/src/transform/: chain.rs  mod.rs  pixeldim.rs
crates/servable/src/transform/transformers/: crop.rs  maxdim.rs  mod.rs
